# 10K

./: .dockerignore  .env.example  .gitignore  10q_analysis_Amazon.json  10q_analysis_Apple_Inc.json  10q_analysis_Microsoft.json  ARCHITECTURE_V3.md  AUTONOMOUS_SCHEDULER.md  AZURE_DEPLOYMENT.md  AZURE_DEPLOYMENT_LOG.md  AZURE_EMBEDDINGS_COMPATIBILITY_REPORT.md  AZURE_MIGRATION_KT_SUMMARY.md  Architecture.md  CENTRALIZED_LLM_CHANGES.md  DEPLOYMENT_GUIDE.md  DEPLOYMENT_SUCCESS.md  Dockerfile  Dockerfile.frontend  Dockerfile.postgres  FRONTEND_FIX.md  KNOWLEDGE_TRANSFER_PART1.md  KNOWLEDGE_TRANSFER_PART2.md  LLM_CONFIGURATION_MIGRATION.md  QUICK_DEPLOYMENT_FIX.md  QUICK_START.md  README.md  README_OLD.md  SCHEDULER_SETUP.md  SMALL_CAP_IMPLEMENTATION.md  docker-compose.yml  docker-entrypoint.sh  feedback_instructions.md  init_db.py  instructions.md  migrate_continuous_mode.py  migrate_scheduler.py  pyproject.toml  pytest.ini  requirements.txt  reset_chromadb.py  (+32 more)
10Q/: tenq_filings.py
docs/: USER_GUIDE.md
frontend/: .env.example  .gitignore  AZURE_AD_SETUP.md  Dockerfile  README.md  deploy_frontend.bat  generate-config.sh  index.html  nginx.conf  package.json  setup_frontend.bat  tailwind.config.js  test_api.html  vite.config.ts
scripts/: backfill_market_cap.py  check_market_caps.py  check_scheduler_config.py  check_scheduler_job.py  dev_run.bat  dev_run.sh  migrate_scheduler_jobs.py  reset_store.bat  reset_store.sh  start_postgres.bat  start_postgres.sh  stop_postgres.bat  stop_postgres.sh  test_get_status.py  test_small_cap_filter.py  trigger_and_poll.ps1
src/: __init__.py  main.py
(+164 files in other folders)
